--- a/assets/config.yml
+++ b/assets/config.yml
@@ -64,13 +64,13 @@ services:
     icon: "fas fa-cloud"
     items:
        - name: "alist"
-        logo: "https://cdn.jsdelivr.net/gh/linkonf/homer/assets/tools/alist.png"
+        logo: "https://cdn.jsdelivr.net/gh/linkonf/homer/assets/tools/alist.ico"
         subtitle: "A file list program"
         tag: "app"
         url: "/portal/alist"
         target: "_blank" # optional html a tag target attribute
        - name: "qbit"
-        logo: "https://cdn.jsdelivr.net/gh/linkonf/homer/assets/tools/qbittorrent.png"
+        logo: "https://cdn.jsdelivr.net/gh/linkonf/homer/assets/tools/vue.png"
         subtitle: "webui for qbittorrent"
         tag: "app"
         url: "/portal/qbit"
